--- a/app/views/titles/_form.html.erb
+++ b/app/views/titles/_form.html.erb
@@ -12,6 +12,11 @@
   <% end %>
 
   <div class="field">
+    <%= form.label :id %>
+    <%= form.text_field :id %>
+  </div>
+
+  <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
   </div>
