--- a/app/views/titles/index.html.erb
+++ b/app/views/titles/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>ID</th>
+      <th>No.</th>
       <th>Name</th>
       <th>Center</th>
       <th>Release</th>
@@ -16,7 +16,7 @@
   <tbody>
     <% @titles.each do |title| %>
       <tr>
-        <td><%= title.id %></td>
+        <td><%= title.number %></td>
         <td><%= title.name %></td>
         <td><%= title.center %></td>
         <td><%= title.release %></td>
