--- a/app/views/titles/_form.html.erb
+++ b/app/views/titles/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :id %>
-    <%= form.text_field :id %>
+    <%= form.label :number %>
+    <%= form.text_field :number %>
   </div>
 
   <div class="field">
